@@ -127,6 +127,7 @@ class TestPipeline(unittest.TestCase):
         self.pipeline.inverse_trimming_rv = 1
         self.pipeline.low_memory = True
         self.pipeline.two_pass_mode = True
+        self.pipeline.saturation_points = [10, 100, 1000, 10000]
         
     @classmethod
     def tearDownClass(self):
